syntax = "proto3";

option csharp_namespace = "GrpcServiceApp";

package user;

service UserService{
	rpc Add (AddRequest) returns (AddResponse);
}

message AddRequest{
	int32 a = 1;
	int32 b = 2;
}

message AddResponse{
	int32 c = 1;
}